# tracing-web-console

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
example-server/: Cargo.toml  test_api.sh
example-server/src/: main.rs
example-server/src/modules/: mod.rs  orders.rs  products.rs  users.rs
tracing-subscriber-axum/: Cargo.toml  build.rs  dev.sh
tracing-subscriber-axum/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
tracing-subscriber-axum/frontend/src/: App.tsx  index.css  main.tsx
tracing-subscriber-axum/frontend/src/components/: ExportButton.tsx  FilterPresets.tsx  LevelControls.tsx  LogFilters.tsx  LogViewer.tsx
tracing-subscriber-axum/frontend/src/components/ui/: log-level-slider.tsx
tracing-subscriber-axum/frontend/src/hooks/: useHistoricalLogs.ts  useWebSocket.ts
tracing-subscriber-axum/frontend/src/lib/: api.ts  presets.ts  settings.ts
tracing-subscriber-axum/frontend/src/types/: logs.ts
tracing-subscriber-axum/src/: layer.rs  lib.rs  storage.rs  subscriber.rs
tracing-subscriber-axum/src/api/: control.rs  mod.rs
tracing-web-console/: Cargo.toml  build.rs
tracing-web-console/frontend/: .env  .env.development  CLAUDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
tracing-web-console/frontend/src/: App.tsx  main.tsx
tracing-web-console/frontend/src/components/: ExportButton.tsx  FilterPresets.tsx  LevelControls.tsx  LogFilters.tsx  LogViewer.tsx  TargetFilter.tsx  ThemeProvider.tsx  ThemeToggle.tsx
tracing-web-console/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  log-level-slider.tsx  select.tsx
tracing-web-console/frontend/src/hooks/: useLogs.ts  useTargets.ts
tracing-web-console/frontend/src/lib/: api.ts  presets.ts  settings.ts
tracing-web-console/frontend/src/types/: logs.ts
tracing-web-console/src/: frontend.rs  layer.rs  lib.rs  storage.rs  subscriber.rs
tracing-web-console/src/api/: logs.rs  mod.rs
